kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-service-ingress
  namespace: api-games
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: appgames.demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-games-svc
            port:
              number: 80
